--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     .topnav {
         margin-top: 2vh;
         overflow: hidden;
-        background-color: #333;
+        background-color: #fff;
         position: relative;
     }
 
@@ -22,7 +22,7 @@
     }
 
     .topnav a {
-        color: white;
+        color: black;
         padding: 2.8vh 15px;
         text-decoration: none;
         font-size: 42px;
@@ -32,7 +32,7 @@
     .topnav a.icon {
         height: 8vh;
         width: 8vh;
-        background: black;
+        background: white;
         display: block;
         position: absolute;
         left: 0;
@@ -40,8 +40,8 @@
     }
 
     .topnav a:hover {
-        background-color: #ddd;
-        color: black;
+        /*background-color: #ddd*/;
+        color: #007bfb;
     }
 
     .active {
