--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Главная</title><!-- Название вкладки брацзера -->
+    <title>Вереск</title><!-- Название вкладки брацзера -->
     <link rel="stylesheet" type="text/css" href="CSS/style.css"><!-- Файл с основными стилями -->
     <link rel="icon" href="IMG/favicon.svg" type="image/x-icon"><!-- Иконка вкладки брацзера -->
     <link rel="stylesheet" type="text/css" href="CSS/slider.css"><!-- Стили слайдера -->
