--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 <div class="topnav">
     <a class="active">1</a>
     <div id="myLinks">
-        <a href="#index.html">Главная</a>
+        <a  font-size: 11pt href="#index.html">Главная</a>
         <a href="HTML/about.html">О нас</a>
         <a href="HTML/offers.html">Предложения</a>
         <a href="HTML/feedback.html">Отзывы</a>
