--- a/HTML/offers.html
+++ b/HTML/offers.html
@@ -157,19 +157,19 @@
             <div class="cluster">
                 <div class="box">
                     <h2>Еда в номер</h2>
-                    <img src="../IMG/SVG/offers/1.svg">
+                    <img src="../IMG/SVG/offers/1.svg" onClick="openoffer()">
                     <p>Разнообразные завтраки*, закуски, горячие блюда, супы, десерты.</p>
                 </div>
 
                 <div class="box">
                     <h2>Уборка номера</h2>
-                    <img src="../IMG/SVG/offers/2.svg">
+                    <img src="../IMG/SVG/offers/2.svg" onClick="openoffer()">
                     <p>Вытереть в номере пыль, затем пропылесосить и вымыть полы.</p>
                 </div>
 
                 <div class="box">
                     <h2>Минибар</h2>
-                    <img src="../IMG/SVG/offers/3.svg">
+                    <img src="../IMG/SVG/offers/3.svg" onClick="openoffer()">
                     <p>Широкий ассортимент алкогольных, б/а и горячих напитков - все позиции доступны к заказу.</p>
                 </div>
             </div>
@@ -188,5 +188,6 @@
         
     </div>
 </body>
+    <script src = "./JS/script.js"></script>
 </html>
 
